# ada-mono-repo

./: .gitignore  generate_placeholder_icons.py  implementation_plan.md  package-lock.json  run_project.bat
.github/workflows/: ada-genesis.yml  build-desktop.yml
backend/: ada-api.spec  ada_engine.py  database.py  main.py  memory_retriever.py  qa_verification.py  qa_verification_real.py  requirements.txt  test_integration.py  test_unit.py
frontend/: .env  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  AxiomGraph.jsx  DialecticStream.jsx  OracleModal.jsx  OracleModal.test.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
